samples/_failures_safe/1761701899_ae88f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93a44e8e.c: In function ‘main’:
./samples/SAFE/__tmp_93a44e8e.c:150:5: error: expected expression at end of input
  150 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_93a44e8e.c:150:5: error: expected declaration or statement at end of input
